Fix text overflow

--- a/vscode/webviews/UserContextSelector.module.css
+++ b/vscode/webviews/UserContextSelector.module.css
@@ -50,31 +50,37 @@
     border: none;
     color: currentColor;
     background: transparent;
-    padding: 0.25rem 0.5rem;
+    padding: 0.75rem 0.5rem;
     border-radius: 3px;
-
     white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    gap: 0.3rem;
 }
 
-.selection-title,
-.selection-description {
+.selection-item:has(i) {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+
+.title-and-description-container {
     display: flex;
-    justify-items: center;
-    margin: 0;
+    align-items: baseline;
+    gap: 0.1rem;
+    flex-grow: 1;
+    overflow: hidden;
 }
 
-.selection-title-text {
-    margin-left: 0.2em;
+.selection-title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .selection-description {
     margin-left: 0.25rem;
     font-size: smaller;
     opacity: 0.7;
-
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
 
 .selection-item:hover {
